# pico-hands-on

basics/adc_read/: CMakeLists.txt  simple_adc.c
basics/usb_print_hello/: CMakeLists.txt  usb_print.c
